feat: multithreading, readme, ...

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "record_file = Path(\"./record_2.txt\")\n",
+    "record_file = Path(\"./measurements/record_2.txt\")\n",
     "data = record_file.read_text(encoding=\"utf-8\")"
    ]
   },
